<resources>
    <string name="app_name">BakingApp</string>
    <string name="ingredientsTitle"><u>Ingredients</u></string>
    <string name="no_internet_msg_long">No internet connection.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_to_widget">Add to Widget</string>
    <string name="no_video_available">No Video Available</string>
    <string name="cake">TODO</string>
    <string name="description">Description</string>
    <string name="recipe_step_instruction">Recipe Step Instruction</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ingredient">Ingredient</string>
    <string name="retry">Retry</string>
    <string name="recipe_step">Recipe Step</string>
    <string name="todo">TODO</string>
    <string name="recipe_name">Recipe Name</string>
</resources>
